fix: code block right padding on overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@ body {
 }
 
 .prose pre code [data-line] {
-  @apply inline-block w-full pr-2;
+  @apply inline-block min-w-full pr-2;
 }
 
 .prose pre code [data-line]::before {
